# Knit

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  skills-lock.json
.github/workflows/: backend-ci.yml  frontend-ci.yml  supabase-migrations.yml
backend/: ALGORITHMS.md  API.md  README.md  pyproject.toml  railpack.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  logging.py  redis.py  supabase.py
backend/app/models/: attendees.py  events.py  profiles.py
backend/app/routes/: digest.py  embeddings.py  events.py  icebreaker.py  profiles.py
backend/app/services/: gemini.py  linkd.py  scoring.py
backend/tests/: conftest.py  test_digest.py  test_embeddings.py  test_events.py  test_health.py  test_icebreaker.py  test_profiles.py
docs/: Design_system.md  ci-cd.md  database.md  deployment.md  knit_api_contracts.md  knit_implementation_guide.md  knit_schema.sql
frontend/: .firebaserc  pubspec.yaml
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
supabase/migrations/: 0001_extensions.sql  0003_interest_tags.sql  0006_scores_similarity.sql  0009_functions_triggers.sql  0010_digest_count_function.sql  20260528211130_profiles.sql  20260528211152_events.sql  20260528211158_event_attendees.sql  20260528211216_connections_icebreaker.sql  20260528211228_rls_policies.sql  20260529000001_fix_rls_with_check.sql
